# rust-ucx

./: .gitignore  .gitmodules  LICENSE  README.md  out  x
workspace/ucx/: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
workspace/ucx-sys/: .tm_properties  Cargo.toml
workspace/ucx-sys/bindgen-wrapper.conf.d/: bitfield-enum.regex  configuration.sh  constant.mapping  function.mapping  post-includes.rs  rustified-enum.regex  static.mapping
workspace/ucx-sys/bindgen-wrapper.conf.d/header-overrides/: ucx-sys.h
workspace/ucx-sys/compile.conf.d/: compile.configuration.sh
workspace/ucx-sys/compile.conf.d/patches/: configure.ac
workspace/ucx-sys/lib/: size_of_ucp_request.c
workspace/ucx-sys/src/: build.rs  lib.rs
workspace/ucx-sys/src/bindgen/: constants.rs  enums.rs  functions.rs  lib.rs  opaques.rs  statics.rs  structs.rs  types.rs  uses.rs
workspace/ucx-sys/tools/: build-under-cargo  compile  compile-on-mac-os-x-using-cargo  recreate-bindings
workspace/ucx/src/: Application.rs  ApplicationContext.rs  ApplicationContextHandleDropSafety.rs  EndPoint.rs  EndPointReadyToConsumeStreamingData.rs  HyperThreadContext.rs  HyperThreadContextDropSafety.rs  HyperThreadContextHandleDropSafety.rs  MemoryAddress.rs  MemoryAdvice.rs  OurLocalMemoryAddressToMakeRemotelyAccessible.rs  OurRemotelyAccessibleMemory.rs  OurRemotelyAccessibleMemoryAddress.rs  OurRemotelyAccessibleMemoryHandleDropSafety.rs  OurRemotelyAccessibleMemoryKey.rs  OurRemotelyAccessibleServerEndPointAddress.rs  OurRemotelyAccessibleWorkerAddress.rs  OurRemotelyAccessibleWorkerEndPointAddress.rs  TheirRemoteAddress.rs  TheirRemotelyAccessibleEndPoint.rs  TheirRemotelyAccessibleEndPointAddress.rs  TheirRemotelyAccessibleMemory.rs  TheirRemotelyAccessibleMemoryAddress.rs  TheirRemotelyAccessibleServerAddress.rs  TheirRemotelyAccessibleServerEndPointAddress.rs  TheirRemotelyAccessibleWorkerAddress.rs  TheirRemotelyAccessibleWorkerEndPointAddress.rs  Worker.rs  WorkerHandleDropSafety.rs  ZeroBasedHyperThreadIndex.rs  c_str.rs  callback_is_ignored.rs  lib.linux.rs  lib.rs  panic_on_error_with_clean_up.rs  receive_callback_is_ignored.rs  send_callback_is_ignored.rs
workspace/ucx/src/attributes/: ApplicationContextAttributes.rs  CommunicationInterfaceContextAttributes.rs  HasAttributes.rs  HyperThreadContextAttributes.rs  MappedMemoryAttributes.rs  MemoryDomainAttributes.rs  OurRemotelyAccessibleMemoryAttributes.rs  WorkerAttributes.rs  WorkerThreadMode.rs  mod.rs
workspace/ucx/src/buffers/: ByteBuffer.rs  Sealed.rs  UcxAllocatedByteBuffer.rs  mod.rs
workspace/ucx/src/callbacks/: mod.rs  stream_receive_callback_is_ignored.rs  tagged_message_receive_callback_is_ignored.rs
workspace/ucx/src/client_server/: ServerListener.rs  ServerListenerAcceptHandler.rs  mod.rs
workspace/ucx/src/configuration/: ApplicationContextCreationError.rs  Configuration.rs  ConfigurationModifyError.rs  CouldNotConfigureUcpError.rs  CouldNotConfigureUcxError.rs  HyperThreadContextCreationError.rs  UcxConfigurationWrapper.rs  mod.rs
workspace/ucx/src/cpu_set/: ZeroBasedHyperThreadIndex.rs  mod.rs  ucs_cpu_set_tExt.rs
workspace/ucx/src/data_type_descriptors/: ContiguousDataTypeDescriptor.rs  DataTypeDescriptor.rs  GenericDataTypeDescriptor.rs  GenericDataTypeDescriptorOperations.rs  GenericDataTypeDescriptorOperationsDeserializer.rs  IoVecDataTypeDescriptor.rs  mod.rs
workspace/ucx/src/data_types/: GenericDataTypeDescriptor.rs  GenericDataTypeDescriptorOperationsDeserializer.rs  GenericDataTypeDescriptorOperationsSerializer.rs  StridedDataTypeDescriptor.rs  TagForLowestThreeBits.rs  mod.rs
workspace/ucx/src/errors/: EndPointPeerFailureErrorHandler.rs  ErrorCode.rs  NonBlockingRequest.rs  Status.rs  StatusOrNonBlockingRequest.rs  StatusOrPointer.rs  mod.rs  ucs_status_ptr_tExt.rs  ucs_status_tExt.rs
workspace/ucx/src/ffi_helpers/: BigEndian.rs  FromCBool.rs  Integer.rs  ReservedForFutureUseFlags.rs  ToCBool.rs  UnsignedInteger.rs  mod.rs  null_or_empty_c_string.rs
workspace/ucx/src/handle_drop_safeties/: ApplicationContextHandleDropSafety.rs  AsynchronousContextHandleDropSafety.rs  CommunicationInterfaceContextHandleDropSafety.rs  mod.rs  (+7 more)
(+575 files in other folders)
