# This file is part of ucx. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/ucx/master/COPYRIGHT. No part of ucx, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of ucx. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/ucx/master/COPYRIGHT.


[package]
name = "ucx-sys"
description = "Low-level FFI bindings to the RDMA C-library libucx"
keywords = ["ucx"]
categories = ["ffi"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/ucx/blob/master/README.md"
homepage = "https://github.com/lemonrock/ucx"
repository = "https://github.com/lemonrock/ucx.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile.conf.d/**/*"]
build = "src/build.rs"
links = "ucx"
readme = "README.md"
publish = true
version = "0.1.0"

[dependencies]
libnuma-sys = "0.0.8"
mlnx-ofed-libibverbs-sys = "0.0.5"
mlnx-ofed-libmlx5-sys = "0.0.5"
mlnx-ofed-librdmacm-sys = "0.0.5"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
