# This file is part of ucx. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/ucx/master/COPYRIGHT. No part of ucx, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of ucx. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/ucx/master/COPYRIGHT.


[package]
name = "ucx"
description = "ucx"
keywords = ["ucx"]
categories = ["ffi"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/ucx/blob/master/README.md"
homepage = "https://github.com/lemonrock/ucx"
repository = "https://github.com/lemonrock/ucx.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
version = "0.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
ucx-sys = { path = "../ucx-sys", version = "0.0.0" }
